# AndroidSnippets

./: .gitignore  README.md  build.gradle  debug.sh
AndroidLearn/: .gitignore  local.properties
AndroidLearn/app/: build.gradle  proguard-rules.pro
AndroidLearn/app/src/main/: AndroidManifest.xml
AndroidLearn/app/src/main/cpp/: hello-jni.c
AndroidLearn/app/src/main/res/drawable/: general_round_rectangle.xml
AndroidLearn/app/src/main/res/layout/: activity_audio_record.xml  activity_draw_pic.xml  activity_h264.xml  activity_image_span.xml  activity_main.xml
AndroidLearn/app/src/main/res/values/: styles.xml
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/snippets/tao/androidsnippets/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/snippets/tao/androidsnippets/: MainActivity.java  SelectionBuilder.java  SkypeCallService.java
app/src/main/res/drawable/: round_rect.xml
app/src/main/res/layout/: activity_camera.xml  activity_hello_jni.xml  activity_main.xml  container.xml  surface_view_demo.xml
app/src/main/res/values/: strings.xml  styles.xml
ffmpeg/app/: CMakeLists.txt  build.gradle
ffmpeg/app/src/androidTest/java/com/example/ffmpeg/: ExampleInstrumentedTest.java
ffmpeg/app/src/main/cpp/: native-lib.cpp
ffmpeg/app/src/main/java/com/example/ffmpeg/: MainActivity.java
ffmpeg/app/src/main/res/layout/: activity_main.xml
ffmpeg/gradle/wrapper/: gradle-wrapper.properties
gradle/wrapper/: gradle-wrapper.properties
wheels/: settings.gradle
wheels/app/: build.gradle
wheels/app/src/main/: AndroidManifest.xml
wheels/app/src/main/res/layout/: activity_main.xml
wheels/gradle/wrapper/: gradle-wrapper.properties
wheels/script/: optimize_png.sh  remove_unused_code.py  remove_unused_drawable.py  remove_unused_drawables.sh
(+103 files in other folders)
